# communicationprotocols

./: README.md  pyproject.toml
src/: __init__.py  auth.py  inventory_service.py  messaging_service.py  models.py  notification_service.py  operations_dashboard.py  order_service.py  persistence.py
src/communicationprotocols.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_messaging.py
