[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "communicationprotocols"
version = "0.1.0"
description = "Protocol for managing system communications internally and externally"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
